@@ -1,1 +1,1 @@
-82fe520675c1218cd3398ff5df099042 *addons.xml
+441b9523a3bc18d16fb79aae089d1737 *addons.xml
